--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,6 +118,41 @@ body {
   background-color: var(--first-color);
 }
 
+
+.jasa {
+  margin-top: 20px;
+  background-color: var(--first-color);
+  padding: 6rem 0 2rem;
+  width: 100%;
+  height: auto;
+  display: grid;
+}
+
+.jasa__container {
+  display: grid;
+  align-content: center;
+  row-gap: 2.5rem;
+}
+
+.jasa__title {
+  font-size: 20px;
+  text-align: center;
+}
+
+.jasa__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.jasa__desc {
+  text-align: center;
+  word-wrap: normal;
+}
+
+
 .about {
   background-color: var(--first-color);
   padding: 6rem 0 2rem;
@@ -146,7 +181,7 @@ body {
   background-color: var(--first-color);
   padding: 6rem 0 2rem;
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: grid;
 }
 
@@ -168,12 +203,6 @@ body {
   flex-wrap: wrap;
   gap: 1rem;
 }
-
-.card__img {
-  width: 150px;
-  height: 150px;
-}
-
 
 /*=============== HOME ===============*/
 .home {
@@ -262,13 +291,16 @@ body {
 /* For small devices */
 @media screen and (max-width: 320px) {
   .home {
-    height: 100vh;
+    height: auto;
   }
   .blog {
-    height: 100vh;
+    height: auto;
   }
   .about {
-    height: 100vh;
+    height: auto;
+  }
+  .jasa {
+    height: auto;
   }
 }
 
